// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given connected and no metadata, when rendering, then show account, no connect button, no node info, tokenization 1`] = `
<Dashboard
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "address",
          "name": "Account name",
        },
      ],
      "currentAddress": Object {
        "address": "address",
        "name": "Account name",
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
>
  <UserRouter />
</Dashboard>
`;

exports[`Given connected, when rendering, then show account, no connect button and tokenization 1`] = `
<Dashboard
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "address",
          "name": "Account name",
        },
      ],
      "currentAddress": Object {
        "address": "address",
        "name": "Account name",
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
>
  <UserRouter />
</Dashboard>
`;

exports[`Given connecting, when rendering, then show account, no button, no node info 1`] = `
<Dashboard
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "address",
          "name": "Account name",
        },
      ],
      "currentAddress": Object {
        "address": "address",
        "name": "Account name",
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
/>
`;

exports[`Given connection error, when rendering, then show account, no button, no node info 1`] = `
<Dashboard
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "address",
          "name": "Account name",
        },
      ],
      "currentAddress": Object {
        "address": "address",
        "name": "Account name",
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
/>
`;

exports[`Given disconnected, when rendering, then show disconnected and connect button 1`] = `
<Dashboard
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "address",
          "name": "name",
        },
      ],
      "currentAddress": Object {
        "address": "address",
        "name": "name",
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
/>
`;

exports[`Given no injected account, when rendering, then nothing displayed 1`] = `null`;
